--- a/BibCleaner/uiBibCleaner.ui
+++ b/BibCleaner/uiBibCleaner.ui
@@ -73,7 +73,7 @@ p, li { white-space: pre-wrap; }
          <string/>
         </property>
         <property name="readOnly">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="placeholderText">
          <string>Location of the file</string>
